# apk-builder

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: android_build.yml  build.yml
apk/apk-builder/.github/workflows/: build.yml
apk/apk-builder/app/: build.gradle
apk/apk-builder/app/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/builder/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/builder/screens/: AnimationGalleryScreen.kt  ButtonGalleryScreen.kt  CameraPreview.kt  CameraScreen.kt  CardGalleryScreen.kt  ListGalleryScreen.kt  PhotoBottomSheetContent.kt  RustExpertScreen.kt  SettingsScreen.kt  TextFieldGalleryScreen.kt  ThemingGalleryScreen.kt  WatermarkConfigScreen.kt
app/src/main/java/com/builder/utils/: FileManager.kt  LocationHelper.kt  NativeLib.kt  PermissionHandler.kt  WatermarkManager.kt
app/src/main/rust/: Cargo.toml
app/src/main/rust/src/: lib.rs
ru/: README.md
ru/.github/workflows/: build.yml
