[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI untuk komunikasi dengan Java/Kotlin
jni = "0.21.1"
# Library image untuk pengolahan pixel dan kompresi
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png", "webp"] }
# Rayon untuk pemrosesan paralel (Sat-set khas Rust)
rayon = "1.8.0"
